# pySigma-backend-duckdb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
sigma/backends/duckdb/: __init__.py  backend.py
sigma/backends/sqlite/: __init__.py  sqlite.py
sigma/pipelines/duckdb/: __init__.py  pipeline.py
sigma/pipelines/sqlite/: __init__.py  sqlite.py
tests/: test_backend_duckdb.py  test_backend_sqlite.py  test_pipelines_duckdb.py  test_pipelines_sqlite.py
