[tool.poetry]
name = "pySigma-backend-duckdb"
version = "0.1.0"
description = "pySigma duckdb backend"
authors = ["Patrik-NTT <patrik.olson@security.ntt>"]
license = "MIT"
repository = "https://github.com/Patrik-NTT/pySigma-backend-duckdb"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9"
pysigma = ">=0.10.9,<0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
